added a message from our lord and saviour

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Yes, this is great</h1>
-		<p>Thank you to GitHub for amazing work</p>
+		<a href="patterner.html">Click here for a secret message from our lord and saviour</a>
 	</body>
 </html>
